# plover_toki_pona_jnl

./: MANIFEST.in  README.md  setup.cfg
plover-toki-pona-jnl/: system.py
plover-toki-pona-jnl/dictionaries/: nimi_ku_suli.json  sitelen.json
plover_toki_pona_jnl/: system.py
plover_toki_pona_jnl/dictionaries/: kipisi_nimi.json  nimi_ku_suli.json  sitelen.json
