[metadata]
name = plover_toki_pona_jnl
version = 0.1.0
description = Support for plover in Toki Pona (jan nanpa Lusi's system)
long_description = file: README.md
long_description_content_type = text/markdown
author = Lucy Deacon / jan nanpa Lusi
author_email = lucyladeacon@gmail.com
url = https://github.com/lucyg00se/plover_toki_pona_jnl
classifiers =
	Development status :: 4 - Beta
	Environment :: Plugins
	Intended Audience :: End Users/Desktop
	License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
	Operating System :: OS Independent
	Programming Language :: Python :: 3.10
keywords = plover plover_plugin toki_pona

[options]
zip_safe = True
install_requires =
	plover>=4.0.0.dev10
include_package_data = True
packages =
	plover-toki-pona-jnl

[options.entry_points]
plover.system =
	Toki Pona JNL = plover_toki_pona_jnl.system